--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -9,6 +9,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Summary</h4>\n",
+    "\n",
+    "As the dataset is very short, I think the best solution is using a pre-trained model.\n",
+    "The chosen one is ResNet18, and the way I'm going to use it is by replacing the output layer of the model with my own output layer, this allows me to use the output of the pre-trained model as input of my model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " I'll start by importing the libraries I'm gonna use."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -22,6 +39,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then I load the model, setting the parameter pretrained to True, this means the model has been trained before."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -31,22 +55,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "for param in model.parameters():\n",
-    "    param.requires_grad = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.fc = nn.Linear(512, 4)"
+    "I'm going to use compose to these transforms. First I resize the image to 224x224, because it is the input expected by the model ResNet18. Second I convert it to a tensor, because I'm working with PyTorch and this framework require the input data to be in the form of a tensor. And finally I normalize the image using mean and standard desviation for each channel, the values are taken from the dataset the model was pre-trained on. "
    ]
   },
   {
@@ -64,14 +76,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "data = datasets.ImageFolder(root='./pento-ssr-challenge/dogs', transform=composed)\n",
-    "\n",
-    "#data_val = datasets.ImageFolder(root='path to validation folder', transform=composed)"
+    "Load the data from the respective folder."
    ]
   },
   {
@@ -80,9 +88,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loader = DataLoader(dataset=data, batch_size=16)\n",
+    "dataset = datasets.ImageFolder(root='./pento-ssr-challenge/dogs', transform=composed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I split the dataset, 80% for training and 20% for validation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset, val_dataset = torch.random_split(dataset, [int(len(dataset) * 0.8), len(dataset) - int(len(dataset) * 0.8)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Like I will only change the output layer of the pre-trained model, I'm going to set the parameters requires grad to False."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for param in model.parameters():\n",
+    "    param.requires_grad = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now I'll replace the output layer with my own fully connected layer, as the last hidden layer of the pre-trained model has 512 neurons it will have 512 inputs, and 4 outputs, one for each class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fc = nn.Linear(512, 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a DataLoader object for the training data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = DataLoader(dataset=train_dataset, batch_size=16)\n",
     "\n",
-    "#val_loader = DataLoader(dataset=data_val, batch_size=16)"
+    "val_loader = DataLoader(dataset=val_dataset, batch_size=16)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here I create the criterion function and the optimizer object. The optimizer only use parameters where the grad attrubute is set to True, so I only update the parameters of the last layer.  "
    ]
   },
   {
@@ -97,12 +177,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "num_epochs = 10"
+    "Finally I train the model using Mini-Batch Stochastic Gradient Descent and print the accuracy of the model."
    ]
   },
   {
@@ -111,6 +189,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "num_epochs = 10\n",
+    "\n",
     "for epoch in range(num_epochs):\n",
     "    for x, y in train_loader:\n",
     "        model.train()\n",
@@ -120,13 +200,51 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "    # for x_test, y_test in val_loader:\n",
-    "    #     model.eval()\n",
-    "    #     z = model(x_test)\n",
-    "    #     _,y_hat = torch.max(z.data, 1)\n",
-    "    #     correct += (yhat == y_test).sum().item()\n",
+    "    correct = 0\n",
+    "    for x_test, y_test in val_loader:\n",
+    "        model.eval()\n",
+    "        z = model(x_test)\n",
+    "        _,yhat = torch.max(z.data, 1)\n",
+    "        correct += (yhat == y_test).sum().item()\n",
     "\n",
-    "    # accuracy = correct / len(data_val)"
+    "    accuracy = correct / len(val_dataset)\n",
+    "\n",
+    "print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This class and the code below allow us to make a prediction of an image using the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import Image\n",
+    "\n",
+    "def image_prediction(image_path):\n",
+    "    image = composed(Image.open(image_path))\n",
+    "    model.eval()\n",
+    "    output = model(image)\n",
+    "    _, prediction = torch.max(output, 1)\n",
+    "    return dataset.classes[prediction.item()]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_path= 'path to image'\n",
+    "predicted_class = image_prediction(image_path)\n",
+    "print(f\"The predicted class is:  {predicted_class}\")"
    ]
   }
  ],
