--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,8 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from torchvision import datasets, models, transforms\n",
-    "from torch.utils.data import DataLoader"
+    "from torch.utils.data import DataLoader\n",
+    "from PIL import Image"
    ]
   },
   {
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,9 +58,7 @@
       "/Users/juan/Library/Python/3.9/lib/python/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
       "  warnings.warn(\n",
       "/Users/juan/Library/Python/3.9/lib/python/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n",
-      "Downloading: \"https://download.pytorch.org/models/resnet18-f37072fd.pth\" to /Users/juan/.cache/torch/hub/checkpoints/resnet18-f37072fd.pth\n",
-      "100%|██████████| 44.7M/44.7M [00:00<00:00, 48.5MB/s]\n"
+      "  warnings.warn(msg)\n"
      ]
     }
    ],
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 1.0\n"
+      "Accuracy: 0.9375\n"
      ]
     }
    ],
@@ -242,14 +241,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tkinter import Image\n",
-    "\n",
     "def image_prediction(image_path):\n",
     "    image = composed(Image.open(image_path))\n",
+    "    image = image.unsqueeze(0)\n",
     "    model.eval()\n",
     "    output = model(image)\n",
     "    _, prediction = torch.max(output, 1)\n",
@@ -259,11 +257,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The predicted class is:  german_shepherd\n"
+     ]
+    }
+   ],
    "source": [
-    "image_path= 'path to image'\n",
+    "image_path= './test/german2.jpg'\n",
     "predicted_class = image_prediction(image_path)\n",
     "print(f\"The predicted class is:  {predicted_class}\")"
    ]
