--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -14,20 +14,20 @@
    "source": [
     "<h4>Summary</h4>\n",
     "\n",
-    "As the dataset is very short, I think the best solution is using a pre-trained model.\n",
-    "The chosen one is ResNet18, and the way I'm going to use it is by replacing the output layer of the model with my own output layer, this allows me to use the output of the pre-trained model as input of my model."
+    "As the dataset is very short, I think the best solution is to use a pre-trained model.\n",
+    "The chosen one is ResNet18, and the way I'm going to use it is by replacing the output layer of the model with my own output layer. This allows me to use the output of the pre-trained model as input of my model."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " I'll start by importing the libraries I'm gonna use."
+    " I'll start by importing the libraries I'm going to use."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,21 +43,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then I load the model, setting the parameter pretrained to True, this means the model has been trained before."
+    "Then I load the model, setting the parameter pretrained to True; this means the model has been trained before."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/juan/Library/Python/3.9/lib/python/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "c:\\Users\\jats2\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
       "  warnings.warn(\n",
-      "/Users/juan/Library/Python/3.9/lib/python/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "c:\\Users\\jats2\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
       "  warnings.warn(msg)\n"
      ]
     }
@@ -70,12 +70,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I'm going to use compose to these transforms. First I resize the image to 224x224, because it is the input expected by the model ResNet18. Second I convert it to a tensor, because I'm working with PyTorch and this framework require the input data to be in the form of a tensor. And finally I normalize the image using mean and standard desviation for each channel, the values are taken from the dataset the model was pre-trained on. "
+    "I'm going to use compose for these transformations. First, I resize the image to 224x224, because that is the input expected by the model ResNet18. Second, I convert it to a tensor because I'm working with PyTorch, and this framework requires the input data to be in the form of a tensor. And finally, I normalize the image using the mean and standard deviation for each channel, the values are taken from the dataset the model was pre-trained on. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,12 +107,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I split the dataset, 80% for training and 20% for validation."
+    "I split the dataset into 80% for training and 20% for validation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,12 +140,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now I'll replace the output layer with my own fully connected layer, as the last hidden layer of the pre-trained model has 512 neurons it will have 512 inputs, and 4 outputs, one for each class."
+    "Now I'll replace the output layer with my own fully connected layer. As the last hidden layer of the pre-trained model has 512 neurons, it will have 512 inputs and 4 outputs, one for each class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,12 +156,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a DataLoader object for the training data."
+    "Create a DataLoader object for the training and validation data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,12 +174,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here I create the criterion function and the optimizer object. The optimizer only use parameters where the grad attrubute is set to True, so I only update the parameters of the last layer.  "
+    "Here I create the criterion function and the optimizer object. The optimizer only uses parameters where the grad attribute is set to True, so I only update the parameters of the last layer.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,12 +192,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally I train the model using Mini-Batch Stochastic Gradient Descent and print the accuracy of the model."
+    "Finally, I train the model using Mini-Batch Stochastic Gradient Descent and print the accuracy of the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,19 +257,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The predicted class is:  german_shepherd\n"
+      "The predicted class is:  poodle\n"
      ]
     }
    ],
    "source": [
-    "image_path= './test/german2.jpg'\n",
+    "image_path= './test/poodle2.jpg' #Insert here the path to the image you want to predict\n",
     "predicted_class = image_prediction(image_path)\n",
     "print(f\"The predicted class is:  {predicted_class}\")"
    ]
@@ -291,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
